other/resources/analytics/anomaly-detection-demo/dashboard-tracker-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: streamlit-dashboard-svc
  name: streamlit-dashboard-svc
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8501
  selector:
    app: streamlit-dashboard
  type: LoadBalancer

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: streamlit-tracker-svc
  name: streamlit-tracker-svc
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8501
  selector:
    app: streamlit-tracker
  type: LoadBalancer
