other/resources/analytics/anomaly-detection-demo/rabbitmq-analytics-topology.yaml
---
# credentials for the schema-replication user
apiVersion: v1
kind: Secret
metadata:
  name: rabbitanalytics4-secret
type: Opaque
stringData:
  username: data-user
  password: data-password
---
# analytics1 user
apiVersion: rabbitmq.com/v1beta1
kind: User
metadata:
  name: rabbitanalytics4-user
spec:
  tags:
    - administrator
  rabbitmqClusterReference:
    name:  rabbitanalytics4
  importCredentialsSecret:
    name: rabbitanalytics4-secret
---
#permissions for the analytics1 user
apiVersion: rabbitmq.com/v1beta1
kind: Permission
metadata:
  name: rabbitanalytics4.default.all
spec:
  vhost: "/"
  userReference:
    name: rabbitanalytics4-user
  permissions:
    write: ".*"
    configure: ".*"
    read: ".*"
  rabbitmqClusterReference:
    name: rabbitanalytics4

# Exchanges
---
apiVersion: rabbitmq.com/v1beta1
kind: Exchange
metadata:
  name: rabbitanalytics4-stream-exchange
spec:
  name: rabbitanalytics4-stream-exchange
  type: fanout
  autoDelete: false
  durable: true
  rabbitmqClusterReference:
    name: rabbitanalytics4
---
apiVersion: rabbitmq.com/v1beta1
kind: Exchange
metadata:
  name: rabbitanalytics4-exchange
spec:
  name: rabbitanalytics4-exchange
  type: topic
  autoDelete: false
  durable: true
  rabbitmqClusterReference:
    name: rabbitanalytics4

# Queue (Stream-backed)
---
apiVersion: rabbitmq.com/v1beta1
kind: Queue
metadata:
  name: rabbitanalytics4-stream
spec:
  name: rabbitanalytics4-stream
  autoDelete: false
  durable: true
  type: stream
  arguments:
    x-max-age: 21D
  rabbitmqClusterReference:
    name: rabbitanalytics4

# Other Queues
---
apiVersion: rabbitmq.com/v1beta1
kind: Queue
metadata:
  name: rabbitanalytics4-stats
spec:
  name: rabbitanalytics4-stats
  autoDelete: false
  durable: true
  type: quorum
  rabbitmqClusterReference:
    name: rabbitanalytics4

---
apiVersion: rabbitmq.com/v1beta1
kind: Queue
metadata:
  name: rabbitanalytics4-dashboard
spec:
  name: rabbitanalytics4-dashboard
  autoDelete: false
  durable: true
  type: quorum
  rabbitmqClusterReference:
    name: rabbitanalytics4

---
apiVersion: rabbitmq.com/v1beta1
kind: Queue
metadata:
  name: rabbitanalytics4-inference
spec:
  name: rabbitanalytics4-inference
  autoDelete: false
  durable: true
  type: quorum
  rabbitmqClusterReference:
    name: rabbitanalytics4

---
# Proxies
---
# Management UI
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: rmqui-httpproxy
spec:
  routes:
    - conditions:
        - prefix: /
      services:
        - name: rabbitanalytics4
          port: 15672
  virtualhost:
    fqdn: rmqui.tanzudatatap.ml
---
# Rabbit Cluster
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: rmq-httpproxy
spec:
  routes:
    - conditions:
        - prefix: /
      services:
        - name: rabbitanalytics4
          port: 5672
  virtualhost:
    fqdn: rmq.tanzudatatap.ml
